examples/test/testpolicy7428.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7428
  namespace: namespace106
spec:
  podSelector:
    matchLabels:
      key49: value34
      key14: value33
      key48: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value0
          key12: value36
          key40: value11
      podSelector:
        matchLabels:
          key43: value16
